Use a cdn with ssl support

--- a/templates/ipsum.html
+++ b/templates/ipsum.html
@@ -3,7 +3,7 @@
     <head>
 	<title>Netsight Ipsum</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href='http://cdn.foundation5.zurb.com/foundation.css' rel='stylesheet' type='text/css'>
+	<link href='//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.2/css/foundation.min.css' rel='stylesheet' type='text/css'>
     </head>
     <body>
 	<div class="row">
@@ -16,8 +16,6 @@
 
 	</div></div>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="http://cdn.foundation5.zurb.com/foundation.js"></script>
     </body>
 </html>
 
